--- a/index.html
+++ b/index.html
@@ -102,44 +102,44 @@
 	<!--Блок самых покупаемых мороженных-->
 	<div class="catalog clearfix">
 		<section class="catalog-ice"><!--tag бирка, ярлык, признак, этикетка, ушко, наконечник-->
-		<div class="ice-cost-catalog">
+		<div class="ice-cost-index">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_1.jpg" width="267" height="267" class="big-ice" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 			<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
-			<p class="specification underline">Сливочное с апельсиновым джемом и цитрусовой стружкой</p><!--Это ссылка скорее?-->
+			<a class="specification" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a><!--Это ссылка скорее?-->
 		</div>	
 			<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 			</div>
 		</section>	
 		<section class="catalog-ice">
-		<div class="ice-cost-catalog">
+		<div class="ice-cost-index">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span> 
 			<img src="img/ice_2.jpg" width="267" height="267" class="big-ice" alt="Сливочно-кофейное с кусочками шоколада">
 			<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
-			<p class="specification">Сливочно-кофейное с кусочками шоколада</p><!--Это ссылка скорее?-->
+			<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a><!--Это ссылка скорее?-->
 		</div>	
 			<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 			</div>
 		</section>
 		<section class="catalog-ice">
-		<div class="ice-cost-catalog">
+		<div class="ice-cost-index">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_3.jpg" width="267" height="267" class="big-ice" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 			<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
-			<p class="specification">Сливочно-клубничное с присыпкой из белого шоколада</p><!--Это ссылка скорее?-->
+			<a class="specification" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a><!--Это ссылка скорее?-->
 		</div>	
 			<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 			</div>
 		</section>
 		<section class="catalog-ice">
-		<div class="ice-cost-catalog">
+		<div class="ice-cost-index">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_4.jpg" width="265" height="265" class="big-ice" alt="Сливочное крем-брюле с карамельной подливкой">
 			<span class="cost">415<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
-			<p class="specification">Сливочное крем-брюле с карамельной подливкой</p><!--Это ссылка скорее?-->
+			<a class="specification" href="#">Сливочное крем-брюле с карамельной подливкой</a><!--Это ссылка скорее?-->
 		</div>	
 			<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
