переименовал  на главной див с картинкой и сделал ссылкам ховер в каталоге и в главной

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	<!--Блок самых покупаемых мороженных-->
 	<div class="catalog clearfix">
 		<section class="catalog-ice"><!--tag бирка, ярлык, признак, этикетка, ушко, наконечник-->
-		<div class="ice-cost-index">
+		<div class="catalog-ice-index">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_1.jpg" width="267" height="267" class="big-ice" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 			<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
@@ -113,7 +113,7 @@
 			</div>
 		</section>	
 		<section class="catalog-ice">
-		<div class="ice-cost-index">
+		<div class="catalog-ice-index">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span> 
 			<img src="img/ice_2.jpg" width="267" height="267" class="big-ice" alt="Сливочно-кофейное с кусочками шоколада">
 			<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
@@ -124,7 +124,7 @@
 			</div>
 		</section>
 		<section class="catalog-ice">
-		<div class="ice-cost-index">
+		<div class="catalog-ice-index">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_3.jpg" width="267" height="267" class="big-ice" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 			<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
@@ -135,7 +135,7 @@
 			</div>
 		</section>
 		<section class="catalog-ice">
-		<div class="ice-cost-index">
+		<div class="catalog-ice-index">
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_4.jpg" width="265" height="265" class="big-ice" alt="Сливочное крем-брюле с карамельной подливкой">
 			<span class="cost">415<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
