--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-	<input class="btn-radio" type="radio" id="btn-1" name="toggle" checked>
-	<input class="btn-radio" type="radio" id="btn-2" name="toggle">
-	<input class="btn-radio" type="radio" id="btn-3" name="toggle">
+	<input class="btn-radio btn-radio-one" type="radio" id="btn-1" name="toggle" checked>
+	<input class="btn-radio btn-radio-two" type="radio" id="btn-2" name="toggle">
+	<input class="btn-radio btn-radio-three" type="radio" id="btn-3" name="toggle">
 	<div class="site-wrapper">	
 	<!--Блок шапки-->
 	<header class="main-header">
@@ -67,15 +67,15 @@
 	</header>
 	<main class="container">
 	<div class="slider">
-		   <div class="slide" id="slide1">
+		   <div class="slide slide-one" id="slide1">
             <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
             <a class="slide-btn" href="#">Давайте оба!</a>
           </div>
-          <div class="slide" id="slide2">
+          <div class="slide slide-two" id="slide2">
             <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
             <a class="slide-btn" href="#">Давайте оба!</a>
           </div>
-          <div class="slide" id="slide3">
+          <div class="slide slide-three" id="slide3">
             <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
             <a class="slide-btn" href="#">Давайте оба!</a>
           </div>	
@@ -229,7 +229,7 @@
 	<!--Модальные формы-->
 	<div class="modal-map"><!--Форма карты-->
 		<button class="modal-map-close" type="button" title="Закрыть">Закрыть</button>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651568!2d30.320894616295742!3d59.938794181876276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1487374363536" width="1200" height="429" frameborder="0" style="border:0" allowfullscreen></iframe>
+		
 		<!--<div id="yandex-map"></div>-->
     </div><!--/Форма карты-->
 	
