сделал выбор одного радио а не несколько

--- a/catalog.html
+++ b/catalog.html
@@ -112,10 +112,10 @@
 			<div class="fatness"><!--Жирность-->
 				<span class="choice-fatness">Жирность:</span><br>
 				<section class="radiobox">
-					<input type="radio" name="check-0" id="0" value="0"><label class="meaning" for="0">0%</label>
-					<input type="radio" name="check-10" id="10" value="10" checked><label class="meaning" for="10">до 10%</label>
-					<input type="radio" name="check-30" id="30" value="30"><label class="meaning" for="30">до 30%</label>
-					<input type="radio" name="check-all" id="50" value="50"><label class="meaning" for="50">выше 30%</label>
+					<input type="radio" name="fatness-ice" id="0" value="0"><label class="meaning" for="0">0%</label>
+					<input type="radio" name="fatness-ice" id="10" value="10" checked><label class="meaning" for="10">до 10%</label>
+					<input type="radio" name="fatness-ice" id="30" value="30"><label class="meaning" for="30">до 30%</label>
+					<input type="radio" name="fatness-ice" id="50" value="50"><label class="meaning" for="50">выше 30%</label>
 				</section>
 			</div>
 			<div class="fillers"><!--Наполнители-->
