поменял тип поиска в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,7 @@
 					<a class="search" href="#"></a>
 					<div class="modal-search"><!--Форма поиска-->
 						<form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-						<input class="search-input" type="search" name="search" placeholder="Что ищем?">
+						<input class="search-input" type="text" name="search" placeholder="Что ищем?">
 						</form>
 					</div><!--/Форма поиска-->
 				</div>
