переименовал название слайдев

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-	<input class="btn-radio btn-radio-one" type="radio" id="btn-1" name="toggle" checked>
-	<input class="btn-radio btn-radio-two" type="radio" id="btn-2" name="toggle">
-	<input class="btn-radio btn-radio-three" type="radio" id="btn-3" name="toggle">
+	<input class="btn-radio btn-radio-one" type="radio" id="btn-one" name="toggle" checked>
+	<input class="btn-radio btn-radio-two" type="radio" id="btn-two" name="toggle">
+	<input class="btn-radio btn-radio-three" type="radio" id="btn-three" name="toggle">
 	<div class="site-wrapper">	
 	<!--Блок шапки-->
 	<header class="main-header">
@@ -67,22 +67,22 @@
 	</header>
 	<main class="container">
 	<div class="slider">
-		   <div class="slide slide-one" id="slide1">
+		   <div class="slide slide-one" id="slide-one">
             <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
             <a class="slide-btn" href="#">Давайте оба!</a>
           </div>
-          <div class="slide slide-two" id="slide2">
+          <div class="slide slide-two" id="slide-two">
             <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
             <a class="slide-btn" href="#">Давайте оба!</a>
           </div>
-          <div class="slide slide-three" id="slide3">
+          <div class="slide slide-three" id="slide-three">
             <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
             <a class="slide-btn" href="#">Давайте оба!</a>
           </div>	
 		  <div class="slider-controls">
-			<label for="btn-1"></label>
-            <label for="btn-2"></label>
-            <label for="btn-3"></label>
+			<label for="btn-one"></label>
+            <label for="btn-two"></label>
+            <label for="btn-three"></label>
           </div>
 	</div>
 	<!--Блок промо акции-->
