Сделал название классов у элементов в начале

--- a/catalog.html
+++ b/catalog.html
@@ -56,8 +56,8 @@
 					<a class="basket-bye-ice" href="#">2 товара</a>
 						<div class="order-in-basket">
 							<form>
-							<p class="order-page"><img src="./img/check_off_order.png" width="10" height="10" class="order-bnt-cancel" alt="Иконка удаления мороженого"><img src="./img/ice_order_one.png" width="33" height="33" class="order-img-ice" alt="Иконка заказанного мороженого"><span class="order-name-ice">Пломбир с апельсиновым джемом</span> 1,5 кг х <span class="order-price-ice">200 руб.</span> 300 руб.</p>
-							<p class="order-page"><img src="./img/check_off_order.png" width="10" height="10" class="order-bnt-cancel" alt="Иконка удаления мороженого"><img src="./img/ice_order_two.png" width="33" height="33" class="order-img-ice" alt="Иконка заказанного мороженого"><span class="order-name-ice">Клубничный пломбир с присыпкой из белого шоколада</span> 1,5 кг х <span class="order-price-ice">300 руб.</span> 450 руб.</p>
+							<p class="order-page"><img class="order-bnt-cancel" src="./img/check_off_order.png" width="10" height="10" alt="Иконка удаления мороженого"><img class="order-img-ice" src="./img/ice_order_one.png" width="33" height="33" alt="Иконка заказанного мороженого"><span class="order-name-ice">Пломбир с апельсиновым джемом</span> 1,5 кг х <span class="order-price-ice">200 руб.</span> 300 руб.</p>
+							<p class="order-page"><img class="order-bnt-cancel" src="./img/check_off_order.png" width="10" height="10" alt="Иконка удаления мороженого"><img class="order-img-ice" src="./img/ice_order_two.png" width="33" height="33" alt="Иконка заказанного мороженого"><span class="order-name-ice">Клубничный пломбир с присыпкой из белого шоколада</span> 1,5 кг х <span class="order-price-ice">300 руб.</span> 450 руб.</p>
 							<hr>
 							<p class="order-all-price">Итого: 750 руб.</p>
 								<button class="btn-make-order" type="submit" title="Оформить заказ">Оформить заказ</button>
@@ -84,7 +84,6 @@
 	</div><!--/Блок хлебных крошек-->
 	<!--Блок выбора мороженных - фильтр-->
 	<div class="selection-ice clearfix">
-
 		<h2>Сливочное мороженое</h2>
 		<form action="https://echo.htmlacademy.ru" method="get" enctype="multipart/form-data" oninput="ruoutput.value=rucount.value">
 			<div class="sorting">
@@ -130,8 +129,7 @@
 			</div>
 			<a class="btn-apply" href="#">Применить</a>
 		</form>
-	<!--/Блок выбора мороженных-->
-	</div>
+	</div><!--/Блок выбора мороженных-->
 	<!--Блок ассортимента мороженных-->
 	<div class="goods clearfix">
 			<div class="case-catalog">
@@ -265,9 +263,7 @@
 					<li><a class="next" href="#next">Вперёд</a></li>
 				</ul>
 			</div>
-	<!--/Блок ассортимента мороженных-->
-	
-	</div>
+	</div><!--/Блок ассортимента мороженных-->
 	</main>
 	<!--Блок подвала-->
 	<footer class="footer-catalog">
@@ -287,7 +283,7 @@
 				</ul>
 			</section>
 			<section class="footer-copyright">
-				<a class="btn-copyright" href="https://htmlacademy.ru"><img src="img/made_footer.png" width="108" height="38" class="big-ice" alt="Эмблема HTML Academy"></a>
+				<a class="btn-copyright" href="https://htmlacademy.ru"><img class="big-ice" src="img/made_footer.png" width="108" height="38"  alt="Эмблема HTML Academy"></a>
 				<!--<a class="btn-copyright" href="https://htmlacademy.ru">HTML Academy</a>-->
 				<p>Сделано в <a href="https://htmlacademy.ru">HTML Academy</a> © 2016</p>
 			</section>
