--- a/index.html
+++ b/index.html
@@ -196,9 +196,7 @@
 			<span class="line-1">(с 10 до 20 ежедневно)</span><br>
 			<a class="btn-feedback" href="#">Форма обратной связи</a>
 		</div>
-	<!--/Блок проезда-адреса-->	
-	
-	</div>
+	</div><!--/Блок проезда-адреса-->	
 	<!--Блок подвала-->
 	<footer>
 		<div class="container clearfix">
@@ -206,8 +204,7 @@
 				<a class="social-btn social-btn-tv" href="#">Твиттер</a>
 				<a class="social-btn social-btn-inst" href="https://instagram.com">Инстаграм</a>
 				<a class="social-btn social-btn-fb" href="https://facebook.com">Фейсбук</a>
-				<a class="social-btn social-btn-vk" href="https://vk.com">Вконтакте</a>
-				
+				<a class="social-btn social-btn-vk" href="https://vk.com">Вконтакте</a>	
 			</section>
 			<section class="footer-contacts">
 				<ul class="footer-main">
@@ -222,8 +219,7 @@
 				<p>Сделано в <a href="https://htmlacademy.ru">HTML Academy</a> © 2017</p>
 			</section>
 		</div>
-	</footer>
-	<!--/Блок подвала-->
+	</footer><!--/Блок подвала-->
 	</div><!--/site-wrapper-->
 	
 	<!--Модальные формы-->
