--- a/catalog.html
+++ b/catalog.html
@@ -132,7 +132,7 @@
 	</div><!--/Блок выбора мороженных-->
 	<!--Блок ассортимента мороженных-->
 	<div class="goods clearfix">
-			<div class="case-catalog">
+			<div class="case-catalog clearfix">
 				<div class="ice-cost-catalog">
 				<img src="img/ice_1.jpg" width="267" height="267" class="big-ice" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 				<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
@@ -303,7 +303,6 @@
 		</section>
     </div><!--Форма входа-->
 		<!--Форма наличия товара в корзине-->
-	<script src="js/jquery.js"></script>
 	<script src="js/script.js"></script>
   </body>
 </html>
