добавил клеарфикс форме

--- a/catalog.html
+++ b/catalog.html
@@ -85,7 +85,7 @@
 	<!--Блок выбора мороженных - фильтр-->
 	<div class="selection-ice clearfix">
 		<h2>Сливочное мороженое</h2>
-		<form action="https://echo.htmlacademy.ru" method="get" enctype="multipart/form-data" oninput="ruoutput.value=rucount.value">
+		<form class="clearfix" action="https://echo.htmlacademy.ru" method="get" enctype="multipart/form-data" oninput="ruoutput.value=rucount.value">
 			<div class="sorting">
 				<label class="choice" for="sorting">Сортировка:</label><br>
 				<select name="sorting" id="sorting">
