убрал высоту у мороженых в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -146,7 +146,7 @@
 				<div class="ice-cost-catalog">
 				<img src="img/ice_2.jpg" width="267" height="267" class="big-ice" alt="Сливочно-кофейное с кусочками шоколада">
 				<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
-				<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a><br>
+				<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a>
 				</div>
 				<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
