--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_1.jpg" width="267" height="267" class="big-ice" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 			<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
-			<a class="specification" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a><!--Это ссылка скорее?-->
+			<a class="specification" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 		</div>	
 			<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -117,7 +117,7 @@
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span> 
 			<img src="img/ice_2.jpg" width="267" height="267" class="big-ice" alt="Сливочно-кофейное с кусочками шоколада">
 			<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
-			<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a><!--Это ссылка скорее?-->
+			<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a>
 		</div>	
 			<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -128,7 +128,7 @@
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_3.jpg" width="267" height="267" class="big-ice" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 			<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
-			<a class="specification" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a><!--Это ссылка скорее?-->
+			<a class="specification" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
 		</div>	
 			<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
@@ -139,7 +139,7 @@
 			<span class="tag"><img src="img/hit.png" width="61" height="61" alt="Значек покупаемого мороженного"></span>
 			<img src="img/ice_4.jpg" width="265" height="265" class="big-ice" alt="Сливочное крем-брюле с карамельной подливкой">
 			<span class="cost">415<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
-			<a class="specification" href="#">Сливочное крем-брюле с карамельной подливкой</a><!--Это ссылка скорее?-->
+			<a class="specification" href="#">Сливочное крем-брюле с карамельной подливкой</a>
 		</div>	
 			<div class="btn-hover-shadow">
 				<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
