Сделал оверлэй для формы обратной связи

--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@
 		<!--<div id="yandex-map"></div>-->
     </div><!--/Форма карты-->
 	<!--<div class="map-overlay"></div>-->
+<!--Модальная Форма обратной связи оверлэй-->
+	<div class="feedback-overlay"></div>
 <!--Модальная Форма обратной связи-->		
 	<div class="modal-feedback">
 		<button class="btn-modal-feedback-close" type="button" title="Закрыть">Закрыть</button>
