Подкорректировал в пикселе перфекте
Надо будет над переполнением контента поработать и ошибками из дом
критериев

--- a/catalog.html
+++ b/catalog.html
@@ -145,9 +145,7 @@
 				<div class="case-catalog clearfix">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_1.jpg" width="267" height="267" class="big-ice" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-						<span class="cost">
-							310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">310<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 					</div>
 					<div class="btn-hover-shadow">	
@@ -157,9 +155,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_2.jpg" width="267" height="267" class="big-ice" alt="Сливочно-кофейное с кусочками шоколада">
-						<span class="cost">
-							380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">380<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочно-кофейное с кусочками шоколада</a>
 					</div>
 					<div class="btn-hover-shadow">
@@ -169,9 +165,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_3.jpg" width="267" height="267" class="big-ice" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-						<span class="cost">
-							355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
 					</div>
 					<div class="btn-hover-shadow">
@@ -181,9 +175,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_4.jpg" width="267" height="267" class="big-ice" alt="Сливочное крем-брюле с карамельной подливкой">
-						<span class="cost">
-							415<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">415<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочное крем-брюле с карамельной подливкой</a>
 					</div>
 						<div class="btn-hover-shadow">
@@ -193,9 +185,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_5.jpg" width="267" height="267" class="big-ice" alt="Сливочное с брусничным джемом">
-						<span class="cost">
-							325<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">325<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочное с брусничным джемом</a>
 					</div>
 					<div class="btn-hover-shadow">
@@ -205,9 +195,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_6.jpg" width="267" height="267" class="big-ice" alt="Сливочно-черничное с цельными ягодами черники">
-						<span class="cost">
-							410<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">410<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочно-черничное с цельными ягодами черники</a>
 					</div>
 					<div class="btn-hover-shadow">
@@ -217,9 +205,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_7.jpg" width="267" height="267" class="big-ice" alt="Сливочно-лимонное с карамельной присыпкой">
-						<span class="cost">
-							375<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">375<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочно-лимонное с карамельной присыпкой</a>
 					</div>
 					<div class="btn-hover-shadow">
@@ -229,9 +215,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_8.jpg" width="267" height="267" class="big-ice" alt="Сливочное с шоколадной стружкой">
-						<span class="cost">
-							320<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">320<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочное с шоколадной стружкой</a>
 					</div>
 					<div class="btn-hover-shadow">
@@ -241,9 +225,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_9.jpg" width="267" height="267" class="big-ice" alt="Сливочно-ванильное с кусочками шоколада">
-						<span class="cost">
-							440<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">440<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочно-ванильное с кусочками шоколада</a>
 					</div>
 					<div class="btn-hover-shadow">
@@ -253,9 +235,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_10.jpg" width="267" height="267" class="big-ice" alt="Сливочное с ментоловым сиропом">
-						<span class="cost">
-							435<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">435<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочное с ментоловым сиропом</a>
 					</div>
 					<div class="btn-hover-shadow">
@@ -265,9 +245,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_11.jpg" width="267" height="267" class="big-ice" alt="Сливочное с кусочками черного шоколада">
-						<span class="cost">
-							355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">355<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочное с кусочками черного шоколада</a>
 					</div>
 					<div class="btn-hover-shadow">
@@ -277,9 +255,7 @@
 				<div class="case-catalog">
 					<div class="ice-cost-catalog">
 						<img src="img/ice_12.jpg" width="267" height="267" class="big-ice" alt="Сливочное с мятным сиропом">
-						<span class="cost">
-							420<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span>
-						</span>
+						<span class="cost">420<span class="weight"><img src="img/rur.png" width="27" height="32" alt="Символ рубля">/кг</span></span>
 						<a class="specification" href="#">Сливочное с мятным сиропом</a>
 					</div>
 					<div class="btn-hover-shadow">
@@ -289,7 +265,7 @@
 				<div class="catalog-pages">
 					<ul class="pages-ices">
 						<li><a class="prev disabled" href="#prev">Назад</a></li>
-						<li><a class="active-page hover" href="#">1</a></li>
+						<li><a class="active-page" href="#">1</a></li>
 						<li><a class="hover" href="#">2</a></li>
 						<li><a class="hover" href="#">3</a></li>
 						<li><a class="hover" href="#">4</a></li>
