10 пул реквест проверка

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru"><!--Пул реквест 10-->
   <head>
     <meta charset="utf-8">
     <title>Каталог товаров</title>
