--- a/catalog.html
+++ b/catalog.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru"><!--Пул реквест 11-->
+<html lang="ru"><!--Пул реквест 12-->
   <head>
     <meta charset="utf-8">
     <title>Каталог товаров</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.min.css">
   </head>
   <body>
 <!--Блок шапки-->
@@ -262,17 +262,15 @@
 						<a class="btn-show-catalog" href="#">Быстрый просмотр</a>
 					</div>
 				</div>
-				<div class="catalog-pages">
-					<ul class="pages-ices">
-						<li><a class="prev disabled" href="#prev">Назад</a></li>
-						<li><a class="active-page" href="#">1</a></li>
-						<li><a class="hover" href="#">2</a></li>
-						<li><a class="hover" href="#">3</a></li>
-						<li><a class="hover" href="#">4</a></li>
-						<li><a class="hover" href="#">5</a></li>
-						<li><a class="next" href="#next">Вперёд</a></li>
-					</ul>
-				</div>
+				<ul class="pages-ices">
+					<li><a class="prev disabled" href="#prev">Назад</a></li>
+					<li><a class="active-page" href="#">1</a></li>
+					<li><a class="hover" href="#">2</a></li>
+					<li><a class="hover" href="#">3</a></li>
+					<li><a class="hover" href="#">4</a></li>
+					<li><a class="hover" href="#">5</a></li>
+					<li><a class="next" href="#next">Вперёд</a></li>
+				</ul>				
 		</div><!--/Блок ассортимента мороженных-->
 	</main>
 <!--Блок подвала-->
@@ -299,6 +297,6 @@
 			</section>
 		</div>
 	</footer><!--/Блок подвала-->
-	<script src="js/script.js"></script>
+	<script src="js/script.min.js"></script>
   </body>
 </html>
