--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="ru"><!--Пул реквест 11-->
+<html lang="ru"><!--Пул реквест 12-->
   <head>
     <meta charset="utf-8">
     <title>Главная Gllacy</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.min.css">
   </head>
   <body>
 <!--Кнопки для слайда скрытые-->
-	<input class="btn-radio btn-radio-one" type="radio" id="btn-one" name="toggle" checked>
-	<input class="btn-radio btn-radio-two" type="radio" id="btn-two" name="toggle">
-	<input class="btn-radio btn-radio-three" type="radio" id="btn-three" name="toggle"><!--/Кнопки для слайда скрытые-->
+	<input class="btn-radio btn-radio-one input-invisible" type="radio" id="btn-one" name="toggle" checked>
+	<input class="btn-radio btn-radio-two input-invisible" type="radio" id="btn-two" name="toggle">
+	<input class="btn-radio btn-radio-three input-invisible" type="radio" id="btn-three" name="toggle"><!--/Кнопки для слайда скрытые-->
 <!--Начало обертки для слайда-->	
 	<div class="site-wrapper">	
 <!--Блок шапки-->
@@ -193,7 +193,7 @@
 			</div><!--/Блок новостей и подписка на рассылку-->
 		</main>
 <!--Блок проезда-адреса-->
-		<div class="driving-address container-map js-map-open">
+		<div class="driving-address container-map" id="yandex-map">
 			<div class="driving">
 				<div class="top-lines">
 					<span class="line-1">Адрес главного офиса<br>
@@ -234,10 +234,10 @@
 		</footer><!--/Блок подвала-->
 	</div><!--/Начало обертки для слайда--><!--/site-wrapper-->
 <!--Модальные формы-->
-	<div class="modal-map"><!--Форма карты-->
-		<button class="modal-map-close" type="button" title="Закрыть">Закрыть</button>	
-		<!--<div id="yandex-map"></div>-->
-    </div><!--/Форма карты-->
+	<!--<div class="modal-map" id="yandex-map"><!--Форма карты
+		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=jKBZb9okmzVAXrHbk9lkyd9Xrh8RszDT&amp;width=100%25&amp;height=430&amp;id=yandex-map;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+	</div>-->
+	<!--/Форма карты-->
 	<!--<div class="map-overlay"></div>-->
 <!--Модальная Форма обратной связи оверлэй-->
 	<div class="feedback-overlay"></div>
@@ -252,6 +252,6 @@
 			<button class="btn-modal-feedback" type="submit" title="Отправить">Отправить</button>
 		</form>
 	</div><!--/Форма обратной связи-->
-	<script src="js/script.js"></script>
+	<script src="js/script.min.js"></script>
   </body>
 </html>
