--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 		</footer><!--/Блок подвала-->
 	</div><!--/Начало обертки для слайда--><!--/site-wrapper-->
 <!--Модальные формы-->
-	<!--<div class="modal-map" id="yandex-map"><!--Форма карты-->
+	<!--<div class="modal-map" id="yandex-map">Форма карты-->
 		<!--<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=jKBZb9okmzVAXrHbk9lkyd9Xrh8RszDT&amp;width=100%25&amp;height=430&amp;id=yandex-map;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
 	</div>-->
 	<!--/Форма карты-->
